docs(installation): add required JVM settings for connection to Ignite (closes #504)